--- a/lmenu/templates/left_menu.html
+++ b/lmenu/templates/left_menu.html
@@ -1,4 +1,5 @@
 [[block page_left_menu]]
+ [[if locals().get('l_menu'): ]]
   <ul>
     [[ for _item in  l_menu or []: ]]
       [[ if len(_item)<4 or not _item[3]: ]]
@@ -15,6 +16,7 @@
       [[ pass ]]
     [[ pass ]]
   </ul>
+ [[ pass ]]
 [[end]]
 
 
