--- a/fgrid/templates/layout.html
+++ b/fgrid/templates/layout.html
@@ -10,8 +10,20 @@
     [[block page_head]]<!-- individual pages can customize header here -->[[end]]
 
 <style>
-    nav li ul li a {font-size: 1.0em; font-weight: 500;}
+    nav li ul li a {font-size: 1.0em; font-weight: 500;   border-bottom: 1px solid blue; } 
     .pfooter p { margin: .4em .4em .4em 1.5em; }
+
+/*
+ul li:after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 40%;
+    margin: 0;
+    background: #f00;
+}
+*/
+
 </style>
 
   </head>
