--- a/fgrid/templates/layout.html
+++ b/fgrid/templates/layout.html
@@ -10,9 +10,10 @@
     [[block page_head]]<!-- individual pages can customize header here -->[[end]]
 
 <style>
-    nav li ul li a {font-size: 1.0em; font-weight: 500;   border-bottom: 1px solid blue; } 
+    nav li ul li a { font-size:1.1em; font-weight: 500;
+                     border-bottom:1px dotted gray;}
+    nav li ul li a:hover {color: white;}
     .pfooter p { margin: .4em .4em .4em 1.5em; }
-
 /*
 ul li:after {
     content: "";
