--- a/_lmenu/templates/layout.html
+++ b/_lmenu/templates/layout.html
@@ -10,9 +10,10 @@
     [[block page_head]]<!-- individual pages can customize header here -->[[end]]
 
 <style>
-    nav li ul li a { font-size:1.1em; font-weight: 500;
+    nav li ul li > a { font-size:1em; font-weight: 500;
                      border-bottom:1px dotted gray;}
-    nav li ul li a:hover {color: white;}
+    nav li ul li > a:hover {color: white;}
+
     .pfooter p { margin: .4em .4em .4em 1.5em; }
 </style>
 
