--- a/_lmenu/templates/left_menu.html
+++ b/_lmenu/templates/left_menu.html
@@ -1,15 +1,15 @@
 [[block page_left_menu]]
  [[if locals().get('l_menu'): ]]
   <ul>
-    [[ for _item in  l_menu or []: ]]
-      [[ if len(_item)<4 or not _item[3]: ]]
-         <li> <a href="[[ = _item[2] ]]">[[ = _item[0] ]]</a> </li>
+    [[ for _item in l_menu or []: ]]
+      [[ if not _item[3]: ]]
+         <li><a href="[[=_item[2] ]]">[[=_item[0] ]]</a></li>
       [[ else: ]]
          <li>
-             [[ = _item[0] ]]
+             [[=_item[0] ]]
              <ul>
-                [[ for _subitem in _item[3]: ]]
-                   <li> <a href="[[ = _subitem[2] ]]">[[ = _subitem[0] ]]</a></li>
+                [[ for _ii in _item[3]: ]]
+                   <li><a href="[[=_ii[2] ]]">[[=_ii[0] ]]</a></li>
                 [[ pass ]]
              </ul>
          </li>
@@ -18,5 +18,3 @@
   </ul>
  [[ pass ]]
 [[end]]
-
-
