--- a/lmenu/templates/layout.html
+++ b/lmenu/templates/layout.html
@@ -10,10 +10,8 @@
     [[block page_head]]<!-- individual pages can customize header here -->[[end]]
 
 <style>
-    nav li ul li a { font-size:1.1em; font-weight: 500;
-                     border-bottom:1px dotted gray;}
-    nav li ul li a:hover {color: white;}
-
+    nav ul li ul li a { font-size:1.1em; font-weight: 500; border-bottom:1px dotted gray;}
+    nav ul li ul li a:hover {color: white;}
 </style>
 
   </head>
