--- a/_lmenu/templates/layout.html
+++ b/_lmenu/templates/layout.html
@@ -10,8 +10,9 @@
     [[block page_head]]<!-- individual pages can customize header here -->[[end]]
 
 <style>
-    nav ul li ul li a { font-size:1.1em; font-weight: 500; border-bottom:1px dotted gray;}
-    nav ul li ul li a:hover {color: white;}
+    li ul li > a { font-size:1em; font-weight: 500; border-bottom:1px solid gray;}
+    li ul li:hover > a {color: white;}
+
     .pfooter p { margin: .4em .4em .4em 1.5em; }
 </style>
 
