--- a/fgrid/templates/layout.html
+++ b/fgrid/templates/layout.html
@@ -10,7 +10,8 @@
     [[block page_head]]<!-- individual pages can customize header here -->[[end]]
 
 <style>
-    li ul li > a { font-size:1em; font-weight: 500; border-bottom:1px solid gray;}
+    li ul li > a { font-size:1em; font-weight: 500;
+                     border-bottom:1px solid gray;}
     li ul li:hover > a {color: white;}
     .pfooter p { margin: .4em .4em .4em 1.5em; }
 </style>
