--- a/fgrid/templates/g2/basic_table.html
+++ b/fgrid/templates/g2/basic_table.html
@@ -1,33 +1,28 @@
+<!doctype html>
 <html>
   <head>
-    <title>Ajax Table</title>
+    <title>Basic Table</title>
     <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet" />
     <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
+
     <style>
       body {
         font-family: Sans-Serif;
       }
     </style>
+
   </head>
   <body>
     <div>
-      <h3>Ajax Table</h3>
+      <h3>Basic Table</h3>
       <hr>
       <div id="table"></div>
     </div>
+
     <script>
       new gridjs.Grid({
-        columns: [
-          { id: 'name', name: 'Name' },
-          { id: 'age', name: 'Age' },
-          { id: 'address', name: 'Address', sort: false },
-          { id: 'phone', name: 'Phone Number', sort: false },
-          { id: 'email', name: 'Email' },
-        ],
-        server: {
-          url: '[[= data_url  ]]',
-          then: results => results.data,
-        },
+        columns:  [[ = XML(columns) ]], 
+        data: [[ = XML(data) ]], 
         search: {
           selector: (cell, rowIndex, cellIndex) => [0, 1, 4].includes(cellIndex) ? cell : null,
         },
