--- a/fgrid/templates/g2/editable_table.html
+++ b/fgrid/templates/g2/editable_table.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div>
-      <h3>Editable Table + url_signer</h3>
+      <h3>Editable Table + url_signer <span style="float:right">edit and press Enter</span></h3> 
       <p>[[= data_url  ]] </p>
       <hr>
       <div id="table"></div>
