--- a/fgrid/templates/g2/basic_table.html
+++ b/fgrid/templates/g2/basic_table.html
@@ -14,7 +14,9 @@
   </head>
   <body>
     <div>
-      <h3>Basic Table</h3>
+      <h3>Basic Table + url2_signer</h3>
+      <p>[[= my_url  ]]</p>
+
       <hr>
       <div id="table"></div>
     </div>
