--- a/fgrid/templates/g2/basic_table.html
+++ b/fgrid/templates/g2/basic_table.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div>
-      <h3>Basic Table + url2_signer</h3>
+      <h3>Basic Table + url_signer_no_session</h3>
       <p>[[= my_url  ]]</p>
 
       <hr>
