--- a/flvsiossl/templates/js-sliders.html
+++ b/flvsiossl/templates/js-sliders.html
@@ -93,7 +93,7 @@ function debounce(func, timeout = 250){
     <input id="slider2" class="sync" type="range" min="0" max="100" value="[[=  t_vars['slider2'] ]]" />
 
     <!-- label for="txt1">(text):</label  -->
-    <input id="txt1" class="sync" type="text" value="[[=  t_vars['txt1'] ]]" />
+    <input id="txt1" class="sync" type="text" value="[[=  t_vars['txt1'] ]]" autofocus  />
     <p id="sync_txt1"></p>
 
 
