--- a/mig2ssl/templates/index.html
+++ b/mig2ssl/templates/index.html
@@ -2,9 +2,10 @@
 
 [[ block page_head ]]
 <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2PYF773PwAGewLSGezkXwAAAABJRU5ErkJggg=="/>
-    <script src="https://cdn.socket.io/4.7.0/socket.io.min.js"></script>
+    <script src="https://cdn.socket.io/4.7.1/socket.io.min.js"></script>
     <title>Mig demo</title>
 [[ end ]]
+[[=ctrl ]]
 
 <div class="section">
   <div class="vars">
