--- a/mig1ssl/templates/index.html
+++ b/mig1ssl/templates/index.html
@@ -2,21 +2,21 @@
 
 [[ block page_head ]]
 <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQYV2PYF773PwAGewLSGezkXwAAAABJRU5ErkJggg=="/>
-    <script src="https://cdn.socket.io/4.7.0/socket.io.min.js"></script>
+    <script src="https://cdn.socket.io/4.7.1/socket.io.min.js"></script>
     <title>Mig demo</title>
 [[ end ]]
 
 <div class="section">
   <div class="vars">
-      [[=message]]
+      [[#=message]]
       <p id="id_user_joined">1</p>
       <p id="id_client_count">2</p>
-      <p id="id_result">3</p>
-      <p id="id_connected">4</p>
       <p id="id_room_count">5</p>
       <p id="id_my_response">6</p>
-      <p id="id_from_do_cmd">7</p>
+      <p id="id_from_XXX_cmd">7</p>
       <p id="id_from_ctrl_call_mult">8</p>
+      <p id="id_result">3</p>
+      <p id="id_connected">4</p>
   </div>
 </div>
 
@@ -29,7 +29,7 @@ const id_result = document.getElementById("id_result")
 const id_connected = document.getElementById("id_connected")
 const id_room_count = document.getElementById("id_room_count")
 const id_my_response = document.getElementById("id_my_response")
-const id_from_do_cmd = document.getElementById("id_from_do_cmd")
+const id_from_XXX_cmd = document.getElementById("id_from_XXX_cmd")
 const id_from_ctrl_call_mult = document.getElementById("id_from_ctrl_call_mult")
 
 
@@ -45,10 +45,11 @@ const sio = io({
 
 sio.on('connect', () => {
   console.log('connected');
-		id_connected.innerHTML='connected';
+  id_connected.innerHTML='connected and emit sum';
   sio.emit('sum', {numbers: [1, 2]}, (result) => {
     console.log(result);
-    id_result.innerHTML = 'result is ' + result['result'];
+    id_result.innerHTML = 'result is ' + JSON.stringify(result);
+    //id_result.innerHTML = 'result is ' + result['result'];
   });
 });
 
@@ -84,17 +85,17 @@ sio.on('room_count', (count) => {
 
 sio.on('user_joined', (username) => {
   id_user_joined.innerHTML = 'User ' + username + ' has joined.' 
-  console.log('User ' + username + ' has joined.');
+  console.log('User: ' + username + ' has joined.');
 });
 
 sio.on('user_left', (username) => {
   id_user_joined.innerHTML = 'User ' + username + ' has left.' 
-  console.log('User ' + username + ' has left.');
+  console.log('User: ' + username + ' has left.');
 });
 
-sio.on('from_do_cmd', (data) => {
-  id_from_do_cmd.innerHTML = 'from_do_cmd ' + data 
-  console.log( 'from_do_cmd ' + data );
+sio.on('from_XXX_cmd', (data) => {
+  id_from_XXX_cmd.innerHTML = 'from_XXX_cmd ' + data 
+  console.log( 'from_XXX_cmd ' + data );
 });
 
 sio.on('from_ctrl_call_mult', (data) => {
