--- a/mig1ssl/templates/p4w_sql_table.html
+++ b/mig1ssl/templates/p4w_sql_table.html
@@ -1,6 +1,6 @@
 [[extend 'layout.html']]
 
-<a role="button" href="[[=URL(  'index'  )]]">goto index</a>
+<!-- a role="button" href="[[=URL(  'index'  )]]">goto index</a -->
 
 <div class="section">
   <div class="vars">
